made individual blog page, comment section and implemented infinite scrolling for new feed

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
